Proyecto2/manifiestos/api-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
      - name: api-rust
        image: api_rust:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust-service
spec:
  type: NodePort
  selector:
    app: api-rust
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
