Proyecto2/manifiestos/grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
      - name: grpc-server
        image: api_go_grpc:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  type: ClusterIP
  selector:
    app: grpc
  ports:
  - port: 50051
    targetPort: 50051
